Swift Logistics Logo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
       <div id="map"></div>
     </div>
     <div style="height: 40%; background-color: #62265f; color: #fff; padding: 40px;">
+      <div style="    width: 50%;
+      margin-left: auto;
+      margin-top: -30px;
+  ">
+        <img src="/swift-log-white.png" style="height: 60px;"/>
+      </div>
       <div class="baseContainer">
         <h2>Calculate Delivery Fee - Swift Logistics</h2>
         <select class="form-control" id="deliverySwitch">
