--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div style="display: none">
+    <div style="display: none" class="input-div" id="input-div">
+      
 
       <input
         id="origin-input"
-        class="controls"
+        class="controls form-control"
         type="text"
+        style="height: 40px; padding: 20px; width: 35%;"
         placeholder="Enter an origin location"
       />
 
       <input
         id="destination-input"
-        class="controls"
+        class="controls form-control"
         type="text"
+        style="height: 40px; padding: 20px; width: 35%;"
+
         placeholder="Enter a destination location"
       />
 
