--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         class="controls form-control"
         type="text"
         style="height: 40px; padding: 20px; width: 35%;"
-        placeholder="Enter an origin location"
+        placeholder="Enter a pickup location"
       />
 
       <input
