--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
         <h2>Calculate Delivery Fee - Swift Logistics</h2>
         <select class="form-control" id="deliverySwitch">
           <option value="">Select Delivery Type</option>
-          <option value="130">Instant Delivery</option>
+          <!-- <option value="130">Instant Delivery</option>
           <option value="90">Same Day Delivery</option>
-          <option value="70">Next Day Delivery</option>
+          <option value="70">Next Day Delivery</option> -->
+          <option value="200">Instant Delivery</option>
+          <option value="160">Same Day Delivery</option>
+          <option value="130">Next Day Delivery</option>
         </select>
         <div id="detailSummary">
 
