--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div style="display: none" class="input-div" id="input-div">
+    <div style="display: block" class="input-div" id="input-div">
       
 
       <input
