--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
           <!-- <option value="130">Instant Delivery</option>
           <option value="90">Same Day Delivery</option>
           <option value="70">Next Day Delivery</option> -->
-          <option value="200">Instant Delivery</option>
+<!--           <option value="200">Instant Delivery</option>
           <option value="160">Same Day Delivery</option>
-          <option value="130">Next Day Delivery</option>
+          <option value="130">Next Day Delivery</option> -->
+          <option value="350">Instant Delivery</option>
+          <option value="300">Same Day Delivery</option>
+          <option value="250">Next Day Delivery</option>
         </select>
         <div id="detailSummary">
 
